--- a/index.html
+++ b/index.html
@@ -187,6 +187,11 @@
                         Bulacan</span
                       >
                     </p>
+                    <div class="">
+                      <a href="assets/resume/JOHN MARK ANUNCIADO.pdf" download class="btn btn-primary">
+                        Download My Resume
+                      </a>
+                    </div>
                   </div>
                 </div>
 
@@ -338,6 +343,11 @@
                 </div>
                 <!-- Edn Resume Item -->
               </div>
+              <!-- <div class="text-center">
+                <a href="path/to/your/resume.pdf" download class="btn btn-primary">
+                  Download My Resume
+                </a>
+              </div> -->
             </div>
           </div>
         </section>
