--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </style>
 
     <body class="index-page">
-      <header id="header" class="header d-flex align-items-center sticky-top">
+      <header id="header" class="header d-flex align-items-center sticky-top" style="background-color:rgb(16, 16, 16)">
         <div
           class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between"
         >
@@ -151,7 +151,7 @@
         <!-- /Hero Section -->
 
         <!-- About Section -->
-        <section id="about" class="about section">
+        <section id="about" class="about section" style="background-color:rgb(245, 245, 245)">
           <div class="container" data-aos="fade-up" data-aos-delay="100">
             <div class="row gy-4">
               <div class="col-md-6">
@@ -241,7 +241,7 @@
         <!-- /About Section -->
 
         <!-- Resume Section -->
-        <section id="resume" class="resume section">
+        <section id="resume" class="resume section" style="background-color:rgb(245, 245, 245)">
           <div class="container">
             <div class="row">
               <div class="col-md-6" data-aos="fade-up" data-aos-delay="100">
@@ -367,7 +367,7 @@
           <div class="container">
             <div
               class="isotope-layout"
-              data-default-filter=".filter-pm"
+              data-default-filter=".filter-none"
               data-layout="masonry"
               data-sort="original-order"
             >
@@ -376,8 +376,8 @@
                 data-aos="fade-up"
                 data-aos-delay="100"
               >
-                <!-- <li data-filter="kupal">Project Management System</li> -->
-                <li data-filter=".filter-pm" class="filter-active">Project Management System</li>
+                <li data-filter=".filter-all" class="filter-active">Projects</li> <br><br>
+                <li data-filter=".filter-pm" >Project Management System</li>
                 <li data-filter=".filter-vote">Survey/Voting System</li>
                 <!-- <li data-filter=".filter-branding">Branding</li>
               <li data-filter=".filter-books">Books</li> -->
@@ -635,7 +635,7 @@
         <!-- /Portfolio Section -->
 
         <!-- SKills Section -->
-        <section id="skill" class="about section">
+        <section id="skill" class="about section" style="background-color:rgb(245, 245, 245)">
           <div class="container" data-aos="fade-up" data-aos-delay="100">
             <h2 class="text-center">Skills & Tools</h2>
             <div class="row">
@@ -825,7 +825,7 @@
         <!-- /Contact Section ewan ko-->
       </main>
 
-      <footer id="footer" class="footer accent-background">
+      <footer id="footer" class="footer">
         <div class="container">
           <div class="copyright text-center">
             <p>
