--- a/voting.html
+++ b/voting.html
@@ -38,7 +38,7 @@
 
 <body class="portfolio-details-page">
 
-  <header id="header" class="header d-flex align-items-center sticky-top">
+  <header id="header" class="header d-flex align-items-center sticky-top" style="background-color:rgb(16, 16, 16)">
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-center">
@@ -97,7 +97,7 @@
     </div><!-- End Page Title -->
 
     <!-- Portfolio Details Section -->
-    <section id="portfolio-details" class="portfolio-details section">
+    <section id="portfolio-details" class="portfolio-details section" style="background-color:rgb(245, 245, 245)">
 
       <div class="container" data-aos="fade-up">
 
@@ -201,7 +201,7 @@
 
   </main>
 
-  <footer id="footer" class="footer accent-background">
+  <footer id="footer" class="footer">
 
     <div class="container">
       <div class="copyright text-center ">
