--- a/pm.html
+++ b/pm.html
@@ -210,7 +210,7 @@
                 <li><strong>Category</strong> Web App</li>
                 <li><strong>Client</strong> Capstone Project</li>
                 <li><strong>Project date</strong> October 2023</li>
-                <li><strong>Project URL</strong> <a href="#">www.example.com</a></li>
+                <li><strong>Project URL</strong> <a href="#">https://task.rkiveadmin.com/</a></li>
                 <li><a href="#" class="btn-visit align-self-start">Visit Website</a></li>
               </ul>
             </div>
