--- a/voting.html
+++ b/voting.html
@@ -187,7 +187,7 @@
                 <li><strong>Category</strong> Web App</li>
                 <li><strong>Client</strong> Intern Project</li>
                 <li><strong>Project date</strong>April 2024</li>
-                <li><strong>Project URL</strong> <a href="https://survey.makopa.online" target="_blank" >survey.makopa.online</a></li>
+                <li><strong>Project URL</strong> <a href="https://survey.makopa.online" target="_blank" >https://survey.makopa.online</a></li>
                 <li><a href="https://survey.makopa.online" class="btn-visit align-self-start" target="_blank">Visit Website</a></li>
               </ul>
             </div>
