last commit for today

--- a/index.html
+++ b/index.html
@@ -44,37 +44,7 @@
     />
 
     <style>
-      #skills {
-        font-family: Arial, sans-serif;
-        margin: 20px;
-      }
 
-      .skill-item {
-        display: flex;
-        align-items: center;
-        margin-bottom: 10px;
-      }
-
-      .skill-item i {
-        color: #2c3e50;
-        margin-right: 10px;
-      }
-
-      .technical-skills ul {
-        list-style: none;
-        padding-left: 0;
-      }
-
-      .technical-skills li {
-        display: flex;
-        align-items: center;
-        margin-bottom: 5px;
-      }
-
-      .technical-skills li i {
-        margin-right: 8px;
-        color: #3498db;
-      }
     </style>
 
     <body class="index-page">
@@ -91,7 +61,7 @@
           <nav id="navmenu" class="navmenu">
             <ul>
               <li>
-                <a href="#hero" class="active">Home<br /></a>
+                <a href="#" class="active">Home<br /></a>
               </li>
               <li><a href="#about">About</a></li>
               <!-- <li><a href="#skill">Skills & Tools</a></li> -->
@@ -356,11 +326,8 @@
         <!-- Portfolio Section -->
         <section id="portfolio" class="portfolio section">
           <!-- Section Title -->
-          <div class="container section-title" data-aos="fade-up">
+          <div class="container section-title" data-aos="fade-up" style="padding: 5px;">
             <h2>Portfolio</h2>
-            <p>
-              <!-- PROJECTS -->
-            </p>
           </div>
           <!-- End Section Title -->
 
@@ -635,9 +602,9 @@
         <!-- /Portfolio Section -->
 
         <!-- SKills Section -->
-        <section id="skill" class="about section" style="background-color:rgb(245, 245, 245)">
+        <section id="skill" class=" section" style="background-color:rgb(245, 245, 245)">
           <div class="container" data-aos="fade-up" data-aos-delay="100">
-            <h2 class="text-center">Skills & Tools</h2>
+            <h2 class="text-center skillcustom">Skills & Tools</h2>
             <div class="row">
               <!-- Soft Skills Section -->
               <div class="soft-skills col-md-6 ml-5 text-center">
@@ -672,8 +639,7 @@
                     </div>
                     <!-- <div class="skill-item"><i class="fas fa-check-circle"></i> Capability to deliver high-quality work independently</div> -->
                     <div class="skill-item">
-                      <i class="fas fa-check-circle"></i> Capability to work
-                      independently
+                      <i class="fas fa-check-circle"></i> Capability to work independently
                     </div>
                   </div>
                 </div>
@@ -714,7 +680,7 @@
         <!-- Contact Section -->
         <section id="contact" class="contact section">
           <!-- Section Title -->
-          <div class="container section-title" data-aos="fade-up">
+          <div class="container section-title" data-aos="fade-up" style="padding: 5px;">
             <h2>Contact</h2>
             <!-- <p>Contact Information</p> -->
           </div>
@@ -749,10 +715,14 @@
 
                 <div class="col-lg-4">
                   <div class="info-item d-flex align-items-center">
-                    <i class="bi bi-envelope flex-shrink-0"></i>
+                    <a href="mailto:jmarkanunciado@gmail.com"><i class="bi bi-envelope flex-shrink-0"></i></a>
                     <div>
                       <h3>Email</h3>
-                      <p>jmarkanunciado@gmail.com</p>
+                      <a
+                      href="mailto:jmarkanunciado@gmail.com"
+                      target="blank_"
+                      >jmarkanunciado@gmail.com
+                    </a>
                     </div>
                   </div>
                 </div>
