--- a/pm.html
+++ b/pm.html
@@ -50,12 +50,12 @@
       <nav id="navmenu" class="navmenu">
         <ul>
           <li>
-            <a href="#hero" class="active">Home<br /></a>
+            <a href="index.html#" >Home<br /></a>
           </li>
-          <li><a href="#about">About</a></li>
+          <li><a href="index.html#about">About</a></li>
           <!-- <li><a href="#skill">Skills & Tools</a></li> -->
-          <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#skill">Skills & Tools</a></li>
+          <li><a href="index.html#portfolio">Portfolio</a></li>
+          <li><a href="index.html#skill">Skills & Tools</a></li>
           <!-- <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="#">Dropdown 1</a></li>
@@ -73,7 +73,7 @@
               <li><a href="#">Dropdown 4</a></li>
             </ul>
           </li> -->
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="index.html#contact">Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
@@ -210,7 +210,7 @@
                 <li><strong>Category</strong> Web App</li>
                 <li><strong>Client</strong> Capstone Project</li>
                 <li><strong>Project date</strong> October 2023</li>
-                <li><strong>Project URL</strong> <a href="#">https://task.rkiveadmin.com/</a></li>
+                <li><strong>Project URL</strong> <a href="https://task.rkiveadmin.com/">https://task.rkiveadmin.com/</a></li>
                 <li><a href="#" class="btn-visit align-self-start">Visit Website</a></li>
               </ul>
             </div>
