--- a/voting.html
+++ b/voting.html
@@ -49,13 +49,13 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li>
-            <a href="#hero" class="active">Home<br /></a>
-          </li>
-          <li><a href="#about">About</a></li>
-          <!-- <li><a href="#skill">Skills & Tools</a></li> -->
-          <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#skill">Skills & Tools</a></li>
+            <li>
+              <a href="index.html#">Home<br /></a>
+            </li>
+            <li><a href="index.html#about">About</a></li>
+            <!-- <li><a href="#skill">Skills & Tools</a></li> -->
+            <li><a href="index.html#portfolio">Portfolio</a></li>
+            <li><a href="index.html#skill">Skills & Tools</a></li>
           <!-- <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="#">Dropdown 1</a></li>
@@ -73,7 +73,7 @@
               <li><a href="#">Dropdown 4</a></li>
             </ul>
           </li> -->
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="index.html#contact">Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
