--- a/pm.html
+++ b/pm.html
@@ -211,7 +211,7 @@
                 <li><strong>Client</strong> Capstone Project</li>
                 <li><strong>Project date</strong> October 2023</li>
                 <li><strong>Project URL</strong> <a href="https://task.rkiveadmin.com/">https://task.rkiveadmin.com/</a></li>
-                <li><a href="#" class="btn-visit align-self-start">Visit Website</a></li>
+                <li><a href="https://task.rkiveadmin.com/" class="btn-visit align-self-start">Visit Website</a></li>
               </ul>
             </div>
           </div>
